fix: add file extension and content type
